docs/api/qiskit/0.19/qiskit.aqua.components.optimizers.L_BFGS_B.md
---
title: L_BFGS_B
description: API reference for qiskit.aqua.components.optimizers.L_BFGS_B
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.optimizers.L_BFGS_B
---

# L\_BFGS\_B

<span id="qiskit.aqua.components.optimizers.L_BFGS_B" />

`L_BFGS_B(maxfun=1000, maxiter=15000, factr=10, iprint=- 1, epsilon=1e-08)`

Limited-memory BFGS Bound optimizer.

The target goal of Limited-memory Broyden-Fletcher-Goldfarb-Shanno Bound (L-BFGS-B) is to minimize the value of a differentiable scalar function $f$. This optimizer is a quasi-Newton method, meaning that, in contrast to Newtons’s method, it does not require $f$’s Hessian (the matrix of $f$’s second derivatives) when attempting to compute $f$’s minimum value.

Like BFGS, L-BFGS is an iterative method for solving unconstrained, non-linear optimization problems, but approximates BFGS using a limited amount of computer memory. L-BFGS starts with an initial estimate of the optimal value, and proceeds iteratively to refine that estimate with a sequence of better estimates.

The derivatives of $f$ are used to identify the direction of steepest descent, and also to form an estimate of the Hessian matrix (second derivative) of $f$. L-BFGS-B extends L-BFGS to handle simple, per-variable bound constraints.

Uses scipy.optimize.fmin\_l\_bfgs\_b. For further detail, please refer to [https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.fmin\_l\_bfgs\_b.html](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.fmin_l_bfgs_b.html)

**Parameters**

*   **maxfun** (`int`) – Maximum number of function evaluations.
*   **maxiter** (`int`) – Maximum number of iterations.
*   **factr** (`float`) – The iteration stops when (f^k - f^\{k+1})/max\{|f^k|, |f^\{k+1}|,1} \<= factr \* eps, where eps is the machine precision, which is automatically generated by the code. Typical values for factr are: 1e12 for low accuracy; 1e7 for moderate accuracy; 10.0 for extremely high accuracy. See Notes for relationship to ftol, which is exposed (instead of factr) by the scipy.optimize.minimize interface to L-BFGS-B.
*   **iprint** (`int`) – Controls the frequency of output. iprint \< 0 means no output; iprint = 0 print only one line at the last iteration; 0 \< iprint \< 99 print also f and |proj g| every iprint iterations; iprint = 99 print details of every iteration except n-vectors; iprint = 100 print also the changes of active set and final x; iprint > 100 print details of every iteration including x and g.
*   **epsilon** (`float`) – Step size used when approx\_grad is True, for numerically calculating the gradient

## Attributes

|                                                                                                                                                                                           |                                     |
| ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------- |
| [`L_BFGS_B.bounds_support_level`](qiskit.aqua.components.optimizers.L_BFGS_B.bounds_support_level "qiskit.aqua.components.optimizers.L_BFGS_B.bounds_support_level")                      | Returns bounds support level        |
| [`L_BFGS_B.gradient_support_level`](qiskit.aqua.components.optimizers.L_BFGS_B.gradient_support_level "qiskit.aqua.components.optimizers.L_BFGS_B.gradient_support_level")                | Returns gradient support level      |
| [`L_BFGS_B.initial_point_support_level`](qiskit.aqua.components.optimizers.L_BFGS_B.initial_point_support_level "qiskit.aqua.components.optimizers.L_BFGS_B.initial_point_support_level") | Returns initial point support level |
| [`L_BFGS_B.is_bounds_ignored`](qiskit.aqua.components.optimizers.L_BFGS_B.is_bounds_ignored "qiskit.aqua.components.optimizers.L_BFGS_B.is_bounds_ignored")                               | Returns is bounds ignored           |
| [`L_BFGS_B.is_bounds_required`](qiskit.aqua.components.optimizers.L_BFGS_B.is_bounds_required "qiskit.aqua.components.optimizers.L_BFGS_B.is_bounds_required")                            | Returns is bounds required          |
| [`L_BFGS_B.is_bounds_supported`](qiskit.aqua.components.optimizers.L_BFGS_B.is_bounds_supported "qiskit.aqua.components.optimizers.L_BFGS_B.is_bounds_supported")                         | Returns is bounds supported         |
| [`L_BFGS_B.is_gradient_ignored`](qiskit.aqua.components.optimizers.L_BFGS_B.is_gradient_ignored "qiskit.aqua.components.optimizers.L_BFGS_B.is_gradient_ignored")                         | Returns is gradient ignored         |
| [`L_BFGS_B.is_gradient_required`](qiskit.aqua.components.optimizers.L_BFGS_B.is_gradient_required "qiskit.aqua.components.optimizers.L_BFGS_B.is_gradient_required")                      | Returns is gradient required        |
| [`L_BFGS_B.is_gradient_supported`](qiskit.aqua.components.optimizers.L_BFGS_B.is_gradient_supported "qiskit.aqua.components.optimizers.L_BFGS_B.is_gradient_supported")                   | Returns is gradient supported       |
| [`L_BFGS_B.is_initial_point_ignored`](qiskit.aqua.components.optimizers.L_BFGS_B.is_initial_point_ignored "qiskit.aqua.components.optimizers.L_BFGS_B.is_initial_point_ignored")          | Returns is initial point ignored    |
| [`L_BFGS_B.is_initial_point_required`](qiskit.aqua.components.optimizers.L_BFGS_B.is_initial_point_required "qiskit.aqua.components.optimizers.L_BFGS_B.is_initial_point_required")       | Returns is initial point required   |
| [`L_BFGS_B.is_initial_point_supported`](qiskit.aqua.components.optimizers.L_BFGS_B.is_initial_point_supported "qiskit.aqua.components.optimizers.L_BFGS_B.is_initial_point_supported")    | Returns is initial point supported  |
| [`L_BFGS_B.setting`](qiskit.aqua.components.optimizers.L_BFGS_B.setting "qiskit.aqua.components.optimizers.L_BFGS_B.setting")                                                             | Return setting                      |

## Methods

|                                                                                                                                                                                    |                                                                                                           |
| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------- |
| [`L_BFGS_B.get_support_level`](qiskit.aqua.components.optimizers.L_BFGS_B.get_support_level "qiskit.aqua.components.optimizers.L_BFGS_B.get_support_level")()                      | Return support level dictionary                                                                           |
| [`L_BFGS_B.gradient_num_diff`](qiskit.aqua.components.optimizers.L_BFGS_B.gradient_num_diff "qiskit.aqua.components.optimizers.L_BFGS_B.gradient_num_diff")(x\_center, f, epsilon) | We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center. |
| [`L_BFGS_B.optimize`](qiskit.aqua.components.optimizers.L_BFGS_B.optimize "qiskit.aqua.components.optimizers.L_BFGS_B.optimize")(num\_vars, objective\_function)                   | Perform optimization.                                                                                     |
| [`L_BFGS_B.print_options`](qiskit.aqua.components.optimizers.L_BFGS_B.print_options "qiskit.aqua.components.optimizers.L_BFGS_B.print_options")()                                  | Print algorithm-specific options.                                                                         |
| [`L_BFGS_B.set_max_evals_grouped`](qiskit.aqua.components.optimizers.L_BFGS_B.set_max_evals_grouped "qiskit.aqua.components.optimizers.L_BFGS_B.set_max_evals_grouped")(limit)     | Set max evals grouped                                                                                     |
| [`L_BFGS_B.set_options`](qiskit.aqua.components.optimizers.L_BFGS_B.set_options "qiskit.aqua.components.optimizers.L_BFGS_B.set_options")(\*\*kwargs)                              | Sets or updates values in the options dictionary.                                                         |
| [`L_BFGS_B.wrap_function`](qiskit.aqua.components.optimizers.L_BFGS_B.wrap_function "qiskit.aqua.components.optimizers.L_BFGS_B.wrap_function")(function, args)                    | Wrap the function to implicitly inject the args at the call of the function.                              |

